# CS327Project4

./: A.cs229  AbcFile.cpp  AbcInstrument.cpp  B.cs229  C.cs229  CMakeLists.txt  ChannelDecorator.cpp  ConcatService.cpp  ConvertService.cpp  EchoDecorator.cpp  EffectDecorator.cpp  IService.cpp  ISound.cpp  InfoService.cpp  Makefile  MixService.cpp  Note.cpp  README.txt  RandomDecorator.cpp  ReverseDecorator.cpp  SampleDownDecorator.cpp  SampleLine.cpp  SampleUpDecorator.cpp  Service.cpp  ShuffleDecorator.cpp  SndInfo.cpp  Sndcat.cpp  Sndcvt.cpp  Sndplay.cpp  Sound.cpp  SoundFile.cpp  SoundGenerator.cpp  Utils.cpp  similarMain.cpp  sndcat.cpp  sndcat.h  sndfxMain.cpp  sndgenMain.cpp  sndplayMain.cpp
headers/: AbcFile.h  AbcInstrument.h  ChannelDecorator.h  ConcatService.h  ConvertService.h  EchoDecorator.h  EffectDecorator.h  IService.h  ISound.h  InfoService.cpp  InfoService.h  MixService.h  Note.h  RandomDecorator.h  ReverseDecorator.h  SampleDownDecorator.h  SampleLine.h  SampleUpDecorator.h  Service.h  ShuffleDecorator.h  SndInfo.h  Sndcat.h  Sound.h  SoundFile.h  SoundGenerator.h  Utils.h  sndcvt.h  sndfx.h  sndgen.h  sndmix.h  sndplay.h
mains/: sndinfoMain.cpp
tests/: A.cs229  C.cs229  a.abc229
